--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "koa-convert": "^1.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "log4js": "^4.1.0"
+    "log4js": "^4.1.0",
+    "mongoose": "^5.5.2"
   },
   "devDependencies": {
     "@types/koa": "^2.0.48",
