--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "co-busboy": "^1.4.0",
     "config": "^3.1.0",
     "dotenv": "^7.0.0",
+    "joi": "^14.3.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
