--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,6 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "last 2 versions",
-            "safari >= 10"
-          ]
-        },
-        "exclude": [
-          "transform-regenerator",
-          "transform-es2015-classes",
-          "transform-es2015-arrow-functions"
-        ]
-      }
-    ],
+    "@babel/preset-env",
     [
       "react"
     ]
