--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-app": "^7.0.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "boom": "^7.3.0",
     "co-busboy": "^1.4.0",
     "config": "^3.1.0",
     "dotenv": "^7.0.0",
