--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,21 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 versions",
+            "safari >= 10"
+          ]
+        },
+        "exclude": [
+          "transform-regenerator",
+          "transform-es2015-classes",
+          "transform-es2015-arrow-functions"
+        ]
+      }
+    ],
     [
       "react"
     ]
