--- a/package.json
+++ b/package.json
@@ -11,17 +11,10 @@
     "start": "nodemon hook.js"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^7.0.0",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "boom": "^7.3.0",
     "co-busboy": "^1.4.0",
     "config": "^3.1.0",
