--- a/.babelrc
+++ b/.babelrc
@@ -1,23 +1,3 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "last 2 versions",
-            "safari >= 10"
-          ]
-        },
-        "exclude": [
-          "transform-regenerator",
-          "transform-es2015-classes",
-          "transform-es2015-arrow-functions"
-        ]
-      }
-    ],
-    [
-      "react"
-    ]
-  ]
+  "presets": ["@babel/preset-env"]
 }
