--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^7.0.0",
     "joi": "^14.3.1",
     "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^4.1.0",
     "koa-convert": "^1.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
