--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "co-busboy": "^1.4.0",
     "config": "^3.1.0",
     "dotenv": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "joi": "^14.3.1",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
